--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -15,4 +15,7 @@
 /Synapse.class
 /Test.class
 /mnistReader/
+/t10k-images.idx3-ubyte
+/t10k-labels.idx1-ubyte
+/train-images.idx3-ubyte
 /train-labels.idx1-ubyte
