--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -16,5 +16,7 @@
 /Test.class
 /TestXOR.class
 /mnistReader/
+/t10k-images.idx3-ubyte
+/t10k-labels.idx1-ubyte
 /train-images.idx3-ubyte
 /train-labels.idx1-ubyte
