--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,24 @@
+/mnistReader/
 /restrictedBoltzmann/
+/t10k-images.idx3-ubyte
+/t10k-labels.idx1-ubyte
+/train-images.idx3-ubyte
+/train-labels.idx1-ubyte
+/AbstractNeuron.class
+/ActivationFunction.class
+/ActiveNeuron.class
+/BackPropagation.class
+/Input.class
+/InputNeuron.class
+/IntermediateNeuron.class
+/LearningAlgorithm.class
+/NeuralNetwork.class
+/OutputData.class
+/OutputNeuron.class
+/Perceptron.class
+/RestrictedBoltzmannMachine.class
+/Sigmoid.class
+/Step.class
+/Synapse.class
+/Test.class
+/TestXOR.class
