--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,32 +1,1 @@
-<<<<<<< HEAD
-/AbstractNeuron.class
-/ActivationFunction.class
-/ActiveNeuron.class
-/BackPropagation.class
-/Input.class
-/InputNeuron.class
-/IntermediateNeuron.class
-/LearningAlgorithm.class
-/NeuralNetwork.class
-/OutputData.class
-/OutputNeuron.class
-/Perceptron.class
-/RestrictedBoltzmannMachine.class
-/Sigmoid.class
-=======
->>>>>>> branch 'master' of https://github.com/DeepLearningSupelec/HAL9000.git
-/Step.class
-/Synapse.class
-/Test.class
-/TestXOR.class
-/mnistReader/
-/restrictedBoltzmann/
-<<<<<<< HEAD
-/t10k-images.idx3-ubyte
-/t10k-labels.idx1-ubyte
-/train-images.idx3-ubyte
-/train-labels.idx1-ubyte
-=======
-/TestsOpenCV.class
-/Hello.class
->>>>>>> branch 'master' of https://github.com/DeepLearningSupelec/HAL9000.git
+/VideoCreate.class
