--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,21 @@
+/AbstractNeuron.class
+/ActivationFunction.class
+/ActiveNeuron.class
+/BackPropagation.class
+/Input.class
+/InputNeuron.class
+/IntermediateNeuron.class
+/LearningAlgorithm.class
+/NeuralNetwork.class
+/OutputData.class
+/OutputNeuron.class
+/Perceptron.class
+/RestrictedBoltzmannMachine.class
+/Sigmoid.class
+/Step.class
+/Synapse.class
+/Test.class
+/TestXOR.class
+/TestsOpenCV.class
+/mnistReader/
 /restrictedBoltzmann/
